# pirula-time

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
pirula_time/: __init__.py  api.py  database.py  main.py
pirula_time/routes/: pages.py
pirula_time/schemas/: init.sql
pirula_time/static/: styles.css
pirula_time/templates/: base.html
pirula_time/templates/pages/: home.html
src/: main.rs  main.rs.bkp
templates/: index.html.hbs
