[package]
name = "pirula-time"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["json"] }
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.1.0", features=["handlebars"] }
rusqlite = "0.32.1"
serde_json = "1.0.128"
tokio = "1.40.0"

[global]
log_level = "debug"
